# CudaNeuralNetwork

./: .gitignore  CMakeLists.txt  Layers.hpp  Model.hpp  README.md  Tensor.hpp  Tensorcopy.hpp  benchmark.py  breast_cancer_classification.cpp  compile_and_run.sh  iris_classification.cpp  main.cpp  main2.cpp  main_iris_classification.cpp  mainforbenchmark.cpp  pytorchbenchmark.py  script.sh  vector_add_kernel.cu  vector_add_test.cpp
Examples/: MNIST.cpp  MNIST_ONNX_evaluation.cpp  breast_cancer_classification.cpp  california_housing.cpp  iris_classification.cpp
Layers/: Layers.hpp
Layers/Dropout/: Dropout.cpp  Dropout.cu  Dropout.hpp
Layers/Linear/: Linear.cpp  Linear.hpp
Layers/ReLU/: ReLU.cpp  ReLU.cu  ReLU.hpp
Layers/Sigmoid/: Sigmoid.cpp  Sigmoid.cu  Sigmoid.hpp
Layers/Softmax/: Softmax.cpp  Softmax.cu  Softmax.hpp
Loader/: ModelLoader.hpp  ONNXLoader.hpp  TabularLoader.hpp
Logger/: Logger.cpp  Logger.hpp
Loss/: Loss.cpp  Loss.cu  Loss.hpp
Loss/BinaryCrossEntropy/: BinCrossEntropy.cpp  BinCrossEntropy.cu  BinCrossEntropy.hpp
Loss/CategoricalCrossEntropy/: CatCrossEntropy.cpp  CatCrossEntropy.cu  CatCrossEntropy.hpp
Loss/MeanSquaredError/: Mse.cpp  Mse.cu  Mse.hpp
MNIST/: MNISTLoader.hpp
Model/: Model.hpp
Optimizer/: Optimize.hpp  Optimizer.hpp
Scheduler/: Scheduler.hpp
Tensor/: Tensor.cpp  Tensor.cu  Tensor.hpp  main_multiple_tests.cpp  main_test.cpp
build_test/: CMakeLists.txt
onnx_generator/: gen.py  mnist_trained.onnx  mnist_untrained.onnx  onnx_generation.py  requirements.txt  simple_linear_model.onnx
onnx_generator/data/Breast_Cancer/: load_and_scale.ipynb  test_data.csv  train_data.csv
onnx_generator/data/California_Housing/: load_and_scale.ipynb  test_data.csv  train_data.csv
onnx_generator/data/Iris/: data_scaler.ipynb  load_and_scale.ipynb  test_data.csv  train_data.csv
